add types to handleLists decorator

--- a/example/Demo_SQL_Documents.ipynb
+++ b/example/Demo_SQL_Documents.ipynb
@@ -93,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<ndi.database.sql.Relationship object at 0x1128867f0>, <ndi.database.sql.Relationship object at 0x112886940>, <ndi.database.sql.Relationship object at 0x112886a30>]\n",
+      "[<ndi.database.sql.Relationship object at 0x117cb37f0>, <ndi.database.sql.Relationship object at 0x117cb3940>, <ndi.database.sql.Relationship object at 0x117cb3a30>]\n",
       "===\n",
       "\n",
       "experiment:  <class 'ndi.experiment.Experiment'>\n",
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "<RelationshipProperty at 0x112811740; documents>"
+       "<RelationshipProperty at 0x117c7e7c0; documents>"
       ]
      },
      "execution_count": 6,
@@ -233,14 +233,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-1686ebe2f4b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# ADD AN INITIAL DOCUMENT (version 1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m d1_v1 = Document(\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mexperiment_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mversion_depth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'name'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1d5117bd898547768ccf51c54a3e7bb2\n"
      ]
     }
    ],
@@ -248,6 +244,7 @@
     "# ADD AN INITIAL DOCUMENT (version 1)\n",
     "\n",
     "d1_v1 = Document(\n",
+    "    name = 'Document 1',\n",
     "    experiment_id = exp.id,\n",
     "    version_depth = 0,\n",
     "    file_id = '1234567890',\n",
@@ -258,9 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1d5117bd898547768ccf51c54a3e7bb2\n"
+     ]
+    }
+   ],
    "source": [
     "# SHOW DOCUMENT REFLECTED IN DATABASE\n",
     "\n",
@@ -276,9 +281,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ndi.database.sql.experiments object at 0x117e14610>\n",
+      "  85de3f5106fe468c9cdac7fda3bfd74f\n",
+      "[<ndi.database.sql.documents object at 0x117df1b50>]\n",
+      "  1d5117bd898547768ccf51c54a3e7bb2\n"
+     ]
+    }
+   ],
    "source": [
     "# SHOW DOCUMENT REFLECTED IN EXPERIMENT\n",
     "\n",
@@ -301,14 +317,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256c0eea099d4172bdfbd4ba9a92ba66\n",
+      "0cecec18485e42438ed1a38cf8418903\n"
+     ]
+    }
+   ],
    "source": [
     "# ADD NEW VERSIONS OF INITIAL DOCUMENT\n",
     "#   note that cleaner api will rely on db context\n",
     "\n",
     "d1_v2a = Document(\n",
+    "    name = 'Document 1',\n",
     "    experiment_id = exp.id,\n",
     "    version_depth = 1,\n",
     "    file_id = '1234567890',\n",
@@ -317,6 +343,7 @@
     "print(d1_v2a.id)\n",
     "\n",
     "d1_v2b = Document(\n",
+    "    name = 'Document 1',\n",
     "    experiment_id = exp.id,\n",
     "    version_depth = 1,\n",
     "    file_id = '1234567890',\n",
@@ -329,9 +356,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parent\n",
+      "<ndi.database.sql.documents object at 0x117e4d430>\n",
+      "  1d5117bd898547768ccf51c54a3e7bb2\n",
+      "\n",
+      "children:\n",
+      "[<ndi.database.sql.documents object at 0x117e4d1c0>, <ndi.database.sql.documents object at 0x117e4d070>]\n",
+      "  256c0eea099d4172bdfbd4ba9a92ba66\n",
+      "      parent: 1d5117bd898547768ccf51c54a3e7bb2\n",
+      "  0cecec18485e42438ed1a38cf8418903\n",
+      "      parent: 1d5117bd898547768ccf51c54a3e7bb2\n"
+     ]
+    }
+   ],
    "source": [
     "# SHOW DERIVED VERSIONS (children) IN INITIAL DOCUMENT REFLECTED IN DATABASE\n",
     "# SHOW PARENTs OF CHILDREN REFLECTED IN DATABASE\n",
@@ -358,13 +402,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f9de233b03c542eaab48dca95c7537c8\n",
+      "  with dependency: 1d5117bd898547768ccf51c54a3e7bb2\n"
+     ]
+    }
+   ],
    "source": [
     "# ADD SECOND DOCUMENT THAT DEPENDS ON INITIAL DOCUMENT\n",
     "\n",
     "d2_v1 = Document(\n",
+    "    name = 'Document 2',\n",
     "    experiment_id = exp.id,\n",
     "    version_depth = 0,\n",
     "    file_id = '5432',\n",
@@ -378,9 +432,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "second document\n",
+      "<ndi.database.sql.documents object at 0x117e674f0>\n",
+      "  f9de233b03c542eaab48dca95c7537c8\n",
+      "\n",
+      "dependencies:\n",
+      "[<ndi.database.sql.documents object at 0x117e675b0>]\n",
+      "  1d5117bd898547768ccf51c54a3e7bb2\n"
+     ]
+    }
+   ],
    "source": [
     "# SHOW DOCUMENT AND DEPENDENCY REFLECTED IN DATABASE\n",
     "\n",
@@ -405,13 +473,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49d9999f1b7f40368306acc275489841\n",
+      "with dependencies: \n",
+      "  1d5117bd898547768ccf51c54a3e7bb2\n",
+      "  f9de233b03c542eaab48dca95c7537c8\n"
+     ]
+    }
+   ],
    "source": [
     "# ADD THIRD DOCUMENT THAT DEPENDS ON INITIAL AND SECOND DOCUMENTS\n",
     "\n",
     "d3_v1 = Document(\n",
+    "    name = 'Document 3',\n",
     "    experiment_id = exp.id,\n",
     "    version_depth = 0,\n",
     "    file_id = '9876',\n",
@@ -425,9 +505,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "third document\n",
+      "<ndi.database.sql.documents object at 0x117e7c400>\n",
+      "  49d9999f1b7f40368306acc275489841\n",
+      "\n",
+      "dependencies:\n",
+      "[<ndi.database.sql.documents object at 0x117e7c4f0>, <ndi.database.sql.documents object at 0x117e7c580>]\n",
+      "  1d5117bd898547768ccf51c54a3e7bb2\n",
+      "  f9de233b03c542eaab48dca95c7537c8\n"
+     ]
+    }
+   ],
    "source": [
     "# SHOW DOCUMENT AND DEPENDENCIES REFLECTED IN DATABASE\n",
     "\n",
@@ -452,9 +547,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initial document\n",
+      "<ndi.database.sql.documents object at 0x117e85790>\n",
+      "  1d5117bd898547768ccf51c54a3e7bb2\n",
+      "\n",
+      "dependants:\n",
+      "[<ndi.database.sql.documents object at 0x117e85f70>, <ndi.database.sql.documents object at 0x117e85fd0>]\n",
+      "  f9de233b03c542eaab48dca95c7537c8\n",
+      "  49d9999f1b7f40368306acc275489841\n"
+     ]
+    }
+   ],
    "source": [
     "# SHOW DOCUMENT AND DEPENDANTS REFLECTED IN DATABASE\n",
     "\n",
@@ -472,18 +582,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '49d9999f1b7f40368306acc275489841',\n",
+       " 'flatbuffer': b'\\x18\\x00\\x00\\x00\\x14\\x00 \\x00\\x18\\x00\\x1c\\x00\\x14\\x00\\x10\\x00\\x00\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x14\\x00\\x00\\x00\\x1c\\x00\\x00\\x00 \\x00\\x00\\x00$\\x00\\x00\\x00,\\x00\\x00\\x000\\x00\\x00\\x00T\\x00\\x00\\x00x\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x04\\x00\\x00\\x009876\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00 \\x00\\x00\\x0085de3f5106fe468c9cdac7fda3bfd74f\\x00\\x00\\x00\\x00 \\x00\\x00\\x0049d9999f1b7f40368306acc275489841\\x00\\x00\\x00\\x00\\n\\x00\\x00\\x00Document 3\\x00\\x00',\n",
+       " 'document_type': '',\n",
+       " 'file_id': '9876',\n",
+       " 'version_depth': 0,\n",
+       " 'asc_path': '',\n",
+       " 'experiment_id': '85de3f5106fe468c9cdac7fda3bfd74f',\n",
+       " 'parent_id': None,\n",
+       " 'experiment': '85de3f5106fe468c9cdac7fda3bfd74f',\n",
+       " 'dependencies': ['1d5117bd898547768ccf51c54a3e7bb2',\n",
+       "  'f9de233b03c542eaab48dca95c7537c8']}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db.find_by_id(Document, d3_v1.id, as_sql_data=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '49d9999f1b7f40368306acc275489841',\n",
+       " 'name': 'Document 3',\n",
+       " 'experiment_id': '85de3f5106fe468c9cdac7fda3bfd74f',\n",
+       " 'document_type': '',\n",
+       " 'version_depth': 0,\n",
+       " 'file_id': '9876',\n",
+       " 'parent_id': None,\n",
+       " 'asc_path': '',\n",
+       " 'dependencies': ['1d5117bd898547768ccf51c54a3e7bb2',\n",
+       "  'f9de233b03c542eaab48dca95c7537c8'],\n",
+       " 'document_extension': None}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db.find_by_id(Document, d3_v1.id).__dict__"
    ]
@@ -497,9 +649,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "No active exception to reraise",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-f67ab9a92d49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdestroy_everything_in\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: No active exception to reraise"
+     ]
+    }
+   ],
    "source": [
     "raise \n",
     "destroy_everything_in(db)"
