--- a/example/Demo_SQL_Documents.ipynb
+++ b/example/Demo_SQL_Documents.ipynb
@@ -46,7 +46,21 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "document_to_document\n"
+     ]
+    }
+   ],
    "source": [
     "# CONNECTION TO DATABASE AND REMOVE ALL EXISTING DOCUMENTS\n",
     "\n",
@@ -93,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<ndi.database.sql.Relationship object at 0x117cb37f0>, <ndi.database.sql.Relationship object at 0x117cb3940>, <ndi.database.sql.Relationship object at 0x117cb3a30>]\n",
+      "[<ndi.database.sql.Relationship object at 0x11d4d4a90>, <ndi.database.sql.Relationship object at 0x11d4d4be0>, <ndi.database.sql.Relationship object at 0x11d4d4cd0>]\n",
       "===\n",
       "\n",
       "experiment:  <class 'ndi.experiment.Experiment'>\n",
@@ -143,7 +157,7 @@
     {
      "data": {
       "text/plain": [
-       "<RelationshipProperty at 0x117c7e7c0; documents>"
+       "<RelationshipProperty at 0x11d45fac0; documents>"
       ]
      },
      "execution_count": 6,
@@ -160,7 +174,8 @@
     "for item in d.relationships:\n",
     "    print(f'{item.key}:  {item.collection}')\n",
     "    for key in ['direction', 'secondary', 'primaryjoin', 'secondaryjoin', 'lazy', 'join_depth', 'back_populates', 'target', '_is_self_referential', '_ndi_class', 'local_remote_pairs']:\n",
-    "        print(f'    {key}: {item.relationship.__dict__[key]}')\n",
+    "        if key in item.relationship.__dict__:\n",
+    "            print(f'    {key}: {item.relationship.__dict__[key]}')\n",
     "    print('---\\n')\n",
     "# for key, value in d.relationships[0].relationship.__dict__.items():\n",
     "#     print(f'{key}:  {value}')\n",
@@ -222,13 +237,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -236,7 +244,126 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1d5117bd898547768ccf51c54a3e7bb2\n"
+      "uselist: True\n",
+      "argument: <sqlalchemy.ext.declarative.clsregistry._class_resolver object at 0x11d4671c0>\n",
+      "secondary: None\n",
+      "primaryjoin: experiments.id = daq_systems.experiment_id\n",
+      "secondaryjoin: None\n",
+      "post_update: False\n",
+      "direction: symbol('ONETOMANY')\n",
+      "viewonly: False\n",
+      "lazy: joined\n",
+      "single_parent: False\n",
+      "_user_defined_foreign_keys: set()\n",
+      "collection_class: None\n",
+      "passive_deletes: False\n",
+      "cascade_backrefs: True\n",
+      "passive_updates: True\n",
+      "remote_side: {Column('experiment_id', String(), ForeignKey('experiments.id'), table=<daq_systems>)}\n",
+      "enable_typechecks: True\n",
+      "query_class: None\n",
+      "innerjoin: False\n",
+      "distinct_target_key: None\n",
+      "doc: None\n",
+      "active_history: False\n",
+      "join_depth: None\n",
+      "omit_join: None\n",
+      "local_remote_pairs: [(Column('id', String(), table=<experiments>, primary_key=True, nullable=False), Column('experiment_id', String(), ForeignKey('experiments.id'), table=<daq_systems>))]\n",
+      "extension: None\n",
+      "bake_queries: True\n",
+      "load_on_pending: False\n",
+      "comparator_factory: <class 'sqlalchemy.orm.relationships.RelationshipProperty.Comparator'>\n",
+      "comparator: <sqlalchemy.orm.relationships.RelationshipProperty.Comparator object at 0x11d4853b0>\n",
+      "_creation_order: 90\n",
+      "strategy_key: (('lazy', 'joined'),)\n",
+      "_reverse_property: {<RelationshipProperty at 0x11d45fb40; experiment>}\n",
+      "_cascade: CascadeOptions('delete,delete-orphan,expunge,merge,refresh-expire,save-update')\n",
+      "order_by: False\n",
+      "back_populates: experiment\n",
+      "backref: None\n",
+      "_ndi_class: <class 'ndi.daq_system.DaqSystem'>\n",
+      "entity: mapped class daq_systems->daq_systems\n",
+      "target: daq_systems\n",
+      "mapper: mapped class daq_systems->daq_systems\n",
+      "_is_self_referential: False\n",
+      "_join_condition: <sqlalchemy.orm.relationships.JoinCondition object at 0x117134d00>\n",
+      "local_columns: {Column('id', String(), table=<experiments>, primary_key=True, nullable=False)}\n",
+      "synchronize_pairs: [(Column('id', String(), table=<experiments>, primary_key=True, nullable=False), Column('experiment_id', String(), ForeignKey('experiments.id'), table=<daq_systems>))]\n",
+      "_calculated_foreign_keys: {Column('experiment_id', String(), ForeignKey('experiments.id'), table=<daq_systems>)}\n",
+      "secondary_synchronize_pairs: []\n",
+      "_dependency_processor: OneToManyDP(experiments.daq_systems)\n",
+      "_lazy_strategy: experiments.daq_systems\n",
+      "\n",
+      "uselist: True\n",
+      "argument: <sqlalchemy.ext.declarative.clsregistry._class_resolver object at 0x11d467a00>\n",
+      "secondary: None\n",
+      "primaryjoin: experiments.id = documents.experiment_id\n",
+      "secondaryjoin: None\n",
+      "post_update: False\n",
+      "direction: symbol('ONETOMANY')\n",
+      "viewonly: False\n",
+      "lazy: joined\n",
+      "single_parent: False\n",
+      "_user_defined_foreign_keys: set()\n",
+      "collection_class: None\n",
+      "passive_deletes: False\n",
+      "cascade_backrefs: True\n",
+      "passive_updates: True\n",
+      "remote_side: {Column('experiment_id', String(), ForeignKey('experiments.id'), table=<documents>)}\n",
+      "enable_typechecks: True\n",
+      "query_class: None\n",
+      "innerjoin: False\n",
+      "distinct_target_key: None\n",
+      "doc: None\n",
+      "active_history: False\n",
+      "join_depth: None\n",
+      "omit_join: None\n",
+      "local_remote_pairs: [(Column('id', String(), table=<experiments>, primary_key=True, nullable=False), Column('experiment_id', String(), ForeignKey('experiments.id'), table=<documents>))]\n",
+      "extension: None\n",
+      "bake_queries: True\n",
+      "load_on_pending: False\n",
+      "comparator_factory: <class 'sqlalchemy.orm.relationships.RelationshipProperty.Comparator'>\n",
+      "comparator: <sqlalchemy.orm.relationships.RelationshipProperty.Comparator object at 0x11d485720>\n",
+      "_creation_order: 91\n",
+      "strategy_key: (('lazy', 'joined'),)\n",
+      "_reverse_property: {<RelationshipProperty at 0x11d4d8140; experiment>}\n",
+      "_cascade: CascadeOptions('delete,delete-orphan,expunge,merge,refresh-expire,save-update')\n",
+      "order_by: False\n",
+      "back_populates: experiment\n",
+      "backref: None\n",
+      "_ndi_class: <class 'ndi.document.Document'>\n",
+      "entity: mapped class documents->documents\n",
+      "target: documents\n",
+      "mapper: mapped class documents->documents\n",
+      "_is_self_referential: False\n",
+      "_join_condition: <sqlalchemy.orm.relationships.JoinCondition object at 0x1171345b0>\n",
+      "local_columns: {Column('id', String(), table=<experiments>, primary_key=True, nullable=False)}\n",
+      "synchronize_pairs: [(Column('id', String(), table=<experiments>, primary_key=True, nullable=False), Column('experiment_id', String(), ForeignKey('experiments.id'), table=<documents>))]\n",
+      "_calculated_foreign_keys: {Column('experiment_id', String(), ForeignKey('experiments.id'), table=<documents>)}\n",
+      "secondary_synchronize_pairs: []\n",
+      "_dependency_processor: OneToManyDP(experiments.documents)\n",
+      "_lazy_strategy: experiments.documents\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in db._collections[Experiment].relationships:\n",
+    "    for key, value in r.relationship.__dict__.items():\n",
+    "        print(f'{key}: {value}')\n",
+    "    print('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01a1749efdc24c68a0f378329fc88ed7\n"
      ]
     }
    ],
@@ -255,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1d5117bd898547768ccf51c54a3e7bb2\n"
+      "01a1749efdc24c68a0f378329fc88ed7\n"
      ]
     }
    ],
@@ -281,17 +408,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.database.sql.experiments object at 0x117e14610>\n",
-      "  85de3f5106fe468c9cdac7fda3bfd74f\n",
-      "[<ndi.database.sql.documents object at 0x117df1b50>]\n",
-      "  1d5117bd898547768ccf51c54a3e7bb2\n"
+      "<ndi.database.sql.experiments object at 0x11d5d6730>\n",
+      "  ebd2d122fcfc48b789fa3aa7ab6e9a81\n",
+      "[<ndi.database.sql.documents object at 0x11d5d63d0>]\n",
+      "  01a1749efdc24c68a0f378329fc88ed7\n"
      ]
     }
    ],
@@ -317,15 +444,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "256c0eea099d4172bdfbd4ba9a92ba66\n",
-      "0cecec18485e42438ed1a38cf8418903\n"
+      "aee810daf0c24a89bdc0b7f8d33e44b2\n",
+      "3fedd643ccef415292f828761f92729f\n"
      ]
     }
    ],
@@ -356,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -364,15 +491,15 @@
      "output_type": "stream",
      "text": [
       "parent\n",
-      "<ndi.database.sql.documents object at 0x117e4d430>\n",
-      "  1d5117bd898547768ccf51c54a3e7bb2\n",
+      "<ndi.database.sql.documents object at 0x11d634640>\n",
+      "  01a1749efdc24c68a0f378329fc88ed7\n",
       "\n",
       "children:\n",
-      "[<ndi.database.sql.documents object at 0x117e4d1c0>, <ndi.database.sql.documents object at 0x117e4d070>]\n",
-      "  256c0eea099d4172bdfbd4ba9a92ba66\n",
-      "      parent: 1d5117bd898547768ccf51c54a3e7bb2\n",
-      "  0cecec18485e42438ed1a38cf8418903\n",
-      "      parent: 1d5117bd898547768ccf51c54a3e7bb2\n"
+      "[<ndi.database.sql.documents object at 0x11d634160>, <ndi.database.sql.documents object at 0x11d634040>]\n",
+      "  aee810daf0c24a89bdc0b7f8d33e44b2\n",
+      "      parent: 01a1749efdc24c68a0f378329fc88ed7\n",
+      "  3fedd643ccef415292f828761f92729f\n",
+      "      parent: 01a1749efdc24c68a0f378329fc88ed7\n"
      ]
     }
    ],
@@ -402,15 +529,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f9de233b03c542eaab48dca95c7537c8\n",
-      "  with dependency: 1d5117bd898547768ccf51c54a3e7bb2\n"
+      "d334aa3268c54898a51575d49607e1cc\n",
+      "  with dependency: 01a1749efdc24c68a0f378329fc88ed7\n"
      ]
     }
    ],
@@ -432,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -440,12 +567,12 @@
      "output_type": "stream",
      "text": [
       "second document\n",
-      "<ndi.database.sql.documents object at 0x117e674f0>\n",
-      "  f9de233b03c542eaab48dca95c7537c8\n",
+      "<ndi.database.sql.documents object at 0x11d6526d0>\n",
+      "  d334aa3268c54898a51575d49607e1cc\n",
       "\n",
       "dependencies:\n",
-      "[<ndi.database.sql.documents object at 0x117e675b0>]\n",
-      "  1d5117bd898547768ccf51c54a3e7bb2\n"
+      "[<ndi.database.sql.documents object at 0x11d652820>]\n",
+      "  01a1749efdc24c68a0f378329fc88ed7\n"
      ]
     }
    ],
@@ -473,17 +600,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "49d9999f1b7f40368306acc275489841\n",
+      "c0b9c14eabc8440f9b153c46a71666ae\n",
       "with dependencies: \n",
-      "  1d5117bd898547768ccf51c54a3e7bb2\n",
-      "  f9de233b03c542eaab48dca95c7537c8\n"
+      "  01a1749efdc24c68a0f378329fc88ed7\n",
+      "  d334aa3268c54898a51575d49607e1cc\n"
      ]
     }
    ],
@@ -505,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -513,13 +640,13 @@
      "output_type": "stream",
      "text": [
       "third document\n",
-      "<ndi.database.sql.documents object at 0x117e7c400>\n",
-      "  49d9999f1b7f40368306acc275489841\n",
+      "<ndi.database.sql.documents object at 0x11d6654f0>\n",
+      "  c0b9c14eabc8440f9b153c46a71666ae\n",
       "\n",
       "dependencies:\n",
-      "[<ndi.database.sql.documents object at 0x117e7c4f0>, <ndi.database.sql.documents object at 0x117e7c580>]\n",
-      "  1d5117bd898547768ccf51c54a3e7bb2\n",
-      "  f9de233b03c542eaab48dca95c7537c8\n"
+      "[<ndi.database.sql.documents object at 0x11d665670>, <ndi.database.sql.documents object at 0x11d665700>]\n",
+      "  d334aa3268c54898a51575d49607e1cc\n",
+      "  01a1749efdc24c68a0f378329fc88ed7\n"
      ]
     }
    ],
@@ -547,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -555,13 +682,13 @@
      "output_type": "stream",
      "text": [
       "initial document\n",
-      "<ndi.database.sql.documents object at 0x117e85790>\n",
-      "  1d5117bd898547768ccf51c54a3e7bb2\n",
+      "<ndi.database.sql.documents object at 0x11d675820>\n",
+      "  01a1749efdc24c68a0f378329fc88ed7\n",
       "\n",
       "dependants:\n",
-      "[<ndi.database.sql.documents object at 0x117e85f70>, <ndi.database.sql.documents object at 0x117e85fd0>]\n",
-      "  f9de233b03c542eaab48dca95c7537c8\n",
-      "  49d9999f1b7f40368306acc275489841\n"
+      "[<ndi.database.sql.documents object at 0x11d678100>, <ndi.database.sql.documents object at 0x11d678220>]\n",
+      "  d334aa3268c54898a51575d49607e1cc\n",
+      "  c0b9c14eabc8440f9b153c46a71666ae\n"
      ]
     }
    ],
@@ -582,26 +709,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': '49d9999f1b7f40368306acc275489841',\n",
-       " 'flatbuffer': b'\\x18\\x00\\x00\\x00\\x14\\x00 \\x00\\x18\\x00\\x1c\\x00\\x14\\x00\\x10\\x00\\x00\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x14\\x00\\x00\\x00\\x1c\\x00\\x00\\x00 \\x00\\x00\\x00$\\x00\\x00\\x00,\\x00\\x00\\x000\\x00\\x00\\x00T\\x00\\x00\\x00x\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x04\\x00\\x00\\x009876\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00 \\x00\\x00\\x0085de3f5106fe468c9cdac7fda3bfd74f\\x00\\x00\\x00\\x00 \\x00\\x00\\x0049d9999f1b7f40368306acc275489841\\x00\\x00\\x00\\x00\\n\\x00\\x00\\x00Document 3\\x00\\x00',\n",
+       "{'id': 'c0b9c14eabc8440f9b153c46a71666ae',\n",
+       " 'flatbuffer': b'\\x18\\x00\\x00\\x00\\x14\\x00 \\x00\\x18\\x00\\x1c\\x00\\x14\\x00\\x10\\x00\\x00\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x14\\x00\\x00\\x00\\x1c\\x00\\x00\\x00 \\x00\\x00\\x00$\\x00\\x00\\x00,\\x00\\x00\\x000\\x00\\x00\\x00T\\x00\\x00\\x00x\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x04\\x00\\x00\\x009876\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00 \\x00\\x00\\x00ebd2d122fcfc48b789fa3aa7ab6e9a81\\x00\\x00\\x00\\x00 \\x00\\x00\\x00c0b9c14eabc8440f9b153c46a71666ae\\x00\\x00\\x00\\x00\\n\\x00\\x00\\x00Document 3\\x00\\x00',\n",
        " 'document_type': '',\n",
        " 'file_id': '9876',\n",
        " 'version_depth': 0,\n",
        " 'asc_path': '',\n",
-       " 'experiment_id': '85de3f5106fe468c9cdac7fda3bfd74f',\n",
+       " 'experiment_id': 'ebd2d122fcfc48b789fa3aa7ab6e9a81',\n",
        " 'parent_id': None,\n",
-       " 'experiment': '85de3f5106fe468c9cdac7fda3bfd74f',\n",
-       " 'dependencies': ['1d5117bd898547768ccf51c54a3e7bb2',\n",
-       "  'f9de233b03c542eaab48dca95c7537c8']}"
+       " 'experiment': 'ebd2d122fcfc48b789fa3aa7ab6e9a81',\n",
+       " 'dependencies': ['01a1749efdc24c68a0f378329fc88ed7',\n",
+       "  'd334aa3268c54898a51575d49607e1cc']}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,26 +739,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': '49d9999f1b7f40368306acc275489841',\n",
+       "{'id': 'c0b9c14eabc8440f9b153c46a71666ae',\n",
        " 'name': 'Document 3',\n",
-       " 'experiment_id': '85de3f5106fe468c9cdac7fda3bfd74f',\n",
+       " 'experiment_id': 'ebd2d122fcfc48b789fa3aa7ab6e9a81',\n",
        " 'document_type': '',\n",
        " 'version_depth': 0,\n",
        " 'file_id': '9876',\n",
        " 'parent_id': None,\n",
        " 'asc_path': '',\n",
-       " 'dependencies': ['1d5117bd898547768ccf51c54a3e7bb2',\n",
-       "  'f9de233b03c542eaab48dca95c7537c8'],\n",
+       " 'dependencies': ['01a1749efdc24c68a0f378329fc88ed7',\n",
+       "  'd334aa3268c54898a51575d49607e1cc'],\n",
        " 'document_extension': None}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -657,9 +784,9 @@
      "evalue": "No active exception to reraise",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m-------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-f67ab9a92d49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdestroy_everything_in\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-f67ab9a92d49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdestroy_everything_in\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mRuntimeError\u001b[0m: No active exception to reraise"
      ]
     }
