update some docs

--- a/example/Demo_SQL_Documents.ipynb
+++ b/example/Demo_SQL_Documents.ipynb
@@ -107,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<ndi.database.sql.Relationship object at 0x11d4d4a90>, <ndi.database.sql.Relationship object at 0x11d4d4be0>, <ndi.database.sql.Relationship object at 0x11d4d4cd0>]\n",
+      "[<ndi.database.sql.Relationship object at 0x11c9f7ca0>, <ndi.database.sql.Relationship object at 0x11c9f7d60>, <ndi.database.sql.Relationship object at 0x11c9f7e80>]\n",
       "===\n",
       "\n",
       "experiment:  <class 'ndi.experiment.Experiment'>\n",
@@ -153,16 +153,6 @@
       "---\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<RelationshipProperty at 0x11d45fac0; documents>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -179,7 +169,7 @@
     "    print('---\\n')\n",
     "# for key, value in d.relationships[0].relationship.__dict__.items():\n",
     "#     print(f'{key}:  {value}')\n",
-    "d.relationships[0].reverse_relationship()"
+    "d.relationships[0].reverse_relationship"
    ]
   },
   {
@@ -198,24 +188,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'ndi.experiment.Experiment'>\n",
       "Experiments\n",
       "  - myExperiment\n",
       "  ---NONE---\n",
       "\n",
+      "<class 'ndi.daq_system.DaqSystem'>\n",
       "DaqSystems\n",
       "  - myDaq\n",
       "  ---NONE---\n",
       "\n",
+      "<class 'ndi.probe.Probe'>\n",
       "Probes\n",
       "\n",
+      "<class 'ndi.epoch.Epoch'>\n",
       "Epochs\n",
       "\n",
+      "<class 'ndi.channel.Channel'>\n",
       "Channels\n",
       "\n",
+      "<class 'ndi.document.Document'>\n",
       "Documents\n",
       "\n",
-      "document_to_documents\n",
-      "\n"
+      "document_to_document\n",
+      "Lookup Table: document_to_document\n"
      ]
     }
    ],
@@ -245,7 +241,7 @@
      "output_type": "stream",
      "text": [
       "uselist: True\n",
-      "argument: <sqlalchemy.ext.declarative.clsregistry._class_resolver object at 0x11d4671c0>\n",
+      "argument: <sqlalchemy.ext.declarative.clsregistry._class_resolver object at 0x11c983850>\n",
       "secondary: None\n",
       "primaryjoin: experiments.id = daq_systems.experiment_id\n",
       "secondaryjoin: None\n",
@@ -273,20 +269,20 @@
       "bake_queries: True\n",
       "load_on_pending: False\n",
       "comparator_factory: <class 'sqlalchemy.orm.relationships.RelationshipProperty.Comparator'>\n",
-      "comparator: <sqlalchemy.orm.relationships.RelationshipProperty.Comparator object at 0x11d4853b0>\n",
+      "comparator: <sqlalchemy.orm.relationships.RelationshipProperty.Comparator object at 0x11c9a4770>\n",
       "_creation_order: 90\n",
       "strategy_key: (('lazy', 'joined'),)\n",
-      "_reverse_property: {<RelationshipProperty at 0x11d45fb40; experiment>}\n",
+      "_reverse_property: {<RelationshipProperty at 0x11c981b40; experiment>}\n",
       "_cascade: CascadeOptions('delete,delete-orphan,expunge,merge,refresh-expire,save-update')\n",
       "order_by: False\n",
       "back_populates: experiment\n",
       "backref: None\n",
       "_ndi_class: <class 'ndi.daq_system.DaqSystem'>\n",
       "entity: mapped class daq_systems->daq_systems\n",
-      "target: daq_systems\n",
       "mapper: mapped class daq_systems->daq_systems\n",
       "_is_self_referential: False\n",
-      "_join_condition: <sqlalchemy.orm.relationships.JoinCondition object at 0x117134d00>\n",
+      "target: daq_systems\n",
+      "_join_condition: <sqlalchemy.orm.relationships.JoinCondition object at 0x11c92dcd0>\n",
       "local_columns: {Column('id', String(), table=<experiments>, primary_key=True, nullable=False)}\n",
       "synchronize_pairs: [(Column('id', String(), table=<experiments>, primary_key=True, nullable=False), Column('experiment_id', String(), ForeignKey('experiments.id'), table=<daq_systems>))]\n",
       "_calculated_foreign_keys: {Column('experiment_id', String(), ForeignKey('experiments.id'), table=<daq_systems>)}\n",
@@ -295,7 +291,7 @@
       "_lazy_strategy: experiments.daq_systems\n",
       "\n",
       "uselist: True\n",
-      "argument: <sqlalchemy.ext.declarative.clsregistry._class_resolver object at 0x11d467a00>\n",
+      "argument: <sqlalchemy.ext.declarative.clsregistry._class_resolver object at 0x11c983700>\n",
       "secondary: None\n",
       "primaryjoin: experiments.id = documents.experiment_id\n",
       "secondaryjoin: None\n",
@@ -323,20 +319,20 @@
       "bake_queries: True\n",
       "load_on_pending: False\n",
       "comparator_factory: <class 'sqlalchemy.orm.relationships.RelationshipProperty.Comparator'>\n",
-      "comparator: <sqlalchemy.orm.relationships.RelationshipProperty.Comparator object at 0x11d485720>\n",
+      "comparator: <sqlalchemy.orm.relationships.RelationshipProperty.Comparator object at 0x11c9a4950>\n",
       "_creation_order: 91\n",
       "strategy_key: (('lazy', 'joined'),)\n",
-      "_reverse_property: {<RelationshipProperty at 0x11d4d8140; experiment>}\n",
+      "_reverse_property: {<RelationshipProperty at 0x11c9fb140; experiment>}\n",
       "_cascade: CascadeOptions('delete,delete-orphan,expunge,merge,refresh-expire,save-update')\n",
       "order_by: False\n",
       "back_populates: experiment\n",
       "backref: None\n",
       "_ndi_class: <class 'ndi.document.Document'>\n",
       "entity: mapped class documents->documents\n",
-      "target: documents\n",
       "mapper: mapped class documents->documents\n",
       "_is_self_referential: False\n",
-      "_join_condition: <sqlalchemy.orm.relationships.JoinCondition object at 0x1171345b0>\n",
+      "target: documents\n",
+      "_join_condition: <sqlalchemy.orm.relationships.JoinCondition object at 0x11c92d8e0>\n",
       "local_columns: {Column('id', String(), table=<experiments>, primary_key=True, nullable=False)}\n",
       "synchronize_pairs: [(Column('id', String(), table=<experiments>, primary_key=True, nullable=False), Column('experiment_id', String(), ForeignKey('experiments.id'), table=<documents>))]\n",
       "_calculated_foreign_keys: {Column('experiment_id', String(), ForeignKey('experiments.id'), table=<documents>)}\n",
@@ -363,7 +359,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01a1749efdc24c68a0f378329fc88ed7\n"
+      "ebcedf093fec4112a15ff9d8b562612a\n"
      ]
     }
    ],
@@ -389,7 +385,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01a1749efdc24c68a0f378329fc88ed7\n"
+      "ebcedf093fec4112a15ff9d8b562612a\n"
      ]
     }
    ],
@@ -415,10 +411,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.database.sql.experiments object at 0x11d5d6730>\n",
-      "  ebd2d122fcfc48b789fa3aa7ab6e9a81\n",
-      "[<ndi.database.sql.documents object at 0x11d5d63d0>]\n",
-      "  01a1749efdc24c68a0f378329fc88ed7\n"
+      "<ndi.database.sql.experiments object at 0x11cb11f70>\n",
+      "  e23a13ccdb4849978f0a8daab9fdf200\n",
+      "[<ndi.database.sql.documents object at 0x11cb118e0>]\n",
+      "  ebcedf093fec4112a15ff9d8b562612a\n"
      ]
     }
    ],
@@ -451,8 +447,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aee810daf0c24a89bdc0b7f8d33e44b2\n",
-      "3fedd643ccef415292f828761f92729f\n"
+      "80d126b8d37c423d8a0cd29f2cfe1886\n",
+      "43e01a6b4f5f455a907be4412e9a8954\n"
      ]
     }
    ],
@@ -491,15 +487,15 @@
      "output_type": "stream",
      "text": [
       "parent\n",
-      "<ndi.database.sql.documents object at 0x11d634640>\n",
-      "  01a1749efdc24c68a0f378329fc88ed7\n",
+      "<ndi.database.sql.documents object at 0x11cb62d90>\n",
+      "  ebcedf093fec4112a15ff9d8b562612a\n",
       "\n",
       "children:\n",
-      "[<ndi.database.sql.documents object at 0x11d634160>, <ndi.database.sql.documents object at 0x11d634040>]\n",
-      "  aee810daf0c24a89bdc0b7f8d33e44b2\n",
-      "      parent: 01a1749efdc24c68a0f378329fc88ed7\n",
-      "  3fedd643ccef415292f828761f92729f\n",
-      "      parent: 01a1749efdc24c68a0f378329fc88ed7\n"
+      "[<ndi.database.sql.documents object at 0x11cb62bb0>, <ndi.database.sql.documents object at 0x11cb624c0>]\n",
+      "  80d126b8d37c423d8a0cd29f2cfe1886\n",
+      "      parent: ebcedf093fec4112a15ff9d8b562612a\n",
+      "  43e01a6b4f5f455a907be4412e9a8954\n",
+      "      parent: ebcedf093fec4112a15ff9d8b562612a\n"
      ]
     }
    ],
@@ -536,8 +532,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d334aa3268c54898a51575d49607e1cc\n",
-      "  with dependency: 01a1749efdc24c68a0f378329fc88ed7\n"
+      "f4ed0876e4fa4dfd83fb5e2acf80baf5\n",
+      "  with dependency: ebcedf093fec4112a15ff9d8b562612a\n"
      ]
     }
    ],
@@ -567,12 +563,12 @@
      "output_type": "stream",
      "text": [
       "second document\n",
-      "<ndi.database.sql.documents object at 0x11d6526d0>\n",
-      "  d334aa3268c54898a51575d49607e1cc\n",
+      "<ndi.database.sql.documents object at 0x11cb7b0a0>\n",
+      "  f4ed0876e4fa4dfd83fb5e2acf80baf5\n",
       "\n",
       "dependencies:\n",
-      "[<ndi.database.sql.documents object at 0x11d652820>]\n",
-      "  01a1749efdc24c68a0f378329fc88ed7\n"
+      "[<ndi.database.sql.documents object at 0x11cb7b1f0>]\n",
+      "  ebcedf093fec4112a15ff9d8b562612a\n"
      ]
     }
    ],
@@ -607,10 +603,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c0b9c14eabc8440f9b153c46a71666ae\n",
+      "305dcb37b71347a290d7b7e1f4303384\n",
       "with dependencies: \n",
-      "  01a1749efdc24c68a0f378329fc88ed7\n",
-      "  d334aa3268c54898a51575d49607e1cc\n"
+      "  ebcedf093fec4112a15ff9d8b562612a\n",
+      "  f4ed0876e4fa4dfd83fb5e2acf80baf5\n"
      ]
     }
    ],
@@ -640,13 +636,13 @@
      "output_type": "stream",
      "text": [
       "third document\n",
-      "<ndi.database.sql.documents object at 0x11d6654f0>\n",
-      "  c0b9c14eabc8440f9b153c46a71666ae\n",
+      "<ndi.database.sql.documents object at 0x11cb89f10>\n",
+      "  305dcb37b71347a290d7b7e1f4303384\n",
       "\n",
       "dependencies:\n",
-      "[<ndi.database.sql.documents object at 0x11d665670>, <ndi.database.sql.documents object at 0x11d665700>]\n",
-      "  d334aa3268c54898a51575d49607e1cc\n",
-      "  01a1749efdc24c68a0f378329fc88ed7\n"
+      "[<ndi.database.sql.documents object at 0x11cb8e0d0>, <ndi.database.sql.documents object at 0x11cb8e160>]\n",
+      "  f4ed0876e4fa4dfd83fb5e2acf80baf5\n",
+      "  ebcedf093fec4112a15ff9d8b562612a\n"
      ]
     }
    ],
@@ -682,13 +678,13 @@
      "output_type": "stream",
      "text": [
       "initial document\n",
-      "<ndi.database.sql.documents object at 0x11d675820>\n",
-      "  01a1749efdc24c68a0f378329fc88ed7\n",
+      "<ndi.database.sql.documents object at 0x11cb9c2b0>\n",
+      "  ebcedf093fec4112a15ff9d8b562612a\n",
       "\n",
       "dependants:\n",
-      "[<ndi.database.sql.documents object at 0x11d678100>, <ndi.database.sql.documents object at 0x11d678220>]\n",
-      "  d334aa3268c54898a51575d49607e1cc\n",
-      "  c0b9c14eabc8440f9b153c46a71666ae\n"
+      "[<ndi.database.sql.documents object at 0x11cb89040>, <ndi.database.sql.documents object at 0x11cb899d0>]\n",
+      "  f4ed0876e4fa4dfd83fb5e2acf80baf5\n",
+      "  305dcb37b71347a290d7b7e1f4303384\n"
      ]
     }
    ],
@@ -715,17 +711,17 @@
     {
      "data": {
       "text/plain": [
-       "{'id': 'c0b9c14eabc8440f9b153c46a71666ae',\n",
-       " 'flatbuffer': b'\\x18\\x00\\x00\\x00\\x14\\x00 \\x00\\x18\\x00\\x1c\\x00\\x14\\x00\\x10\\x00\\x00\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x14\\x00\\x00\\x00\\x1c\\x00\\x00\\x00 \\x00\\x00\\x00$\\x00\\x00\\x00,\\x00\\x00\\x000\\x00\\x00\\x00T\\x00\\x00\\x00x\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x04\\x00\\x00\\x009876\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00 \\x00\\x00\\x00ebd2d122fcfc48b789fa3aa7ab6e9a81\\x00\\x00\\x00\\x00 \\x00\\x00\\x00c0b9c14eabc8440f9b153c46a71666ae\\x00\\x00\\x00\\x00\\n\\x00\\x00\\x00Document 3\\x00\\x00',\n",
+       "{'id': '305dcb37b71347a290d7b7e1f4303384',\n",
+       " 'flatbuffer': b'\\x18\\x00\\x00\\x00\\x14\\x00 \\x00\\x18\\x00\\x1c\\x00\\x14\\x00\\x10\\x00\\x00\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x14\\x00\\x00\\x00\\x1c\\x00\\x00\\x00 \\x00\\x00\\x00$\\x00\\x00\\x00,\\x00\\x00\\x000\\x00\\x00\\x00T\\x00\\x00\\x00x\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x04\\x00\\x00\\x009876\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00 \\x00\\x00\\x00e23a13ccdb4849978f0a8daab9fdf200\\x00\\x00\\x00\\x00 \\x00\\x00\\x00305dcb37b71347a290d7b7e1f4303384\\x00\\x00\\x00\\x00\\n\\x00\\x00\\x00Document 3\\x00\\x00',\n",
        " 'document_type': '',\n",
        " 'file_id': '9876',\n",
        " 'version_depth': 0,\n",
        " 'asc_path': '',\n",
-       " 'experiment_id': 'ebd2d122fcfc48b789fa3aa7ab6e9a81',\n",
+       " 'experiment_id': 'e23a13ccdb4849978f0a8daab9fdf200',\n",
        " 'parent_id': None,\n",
-       " 'experiment': 'ebd2d122fcfc48b789fa3aa7ab6e9a81',\n",
-       " 'dependencies': ['01a1749efdc24c68a0f378329fc88ed7',\n",
-       "  'd334aa3268c54898a51575d49607e1cc']}"
+       " 'experiment': 'e23a13ccdb4849978f0a8daab9fdf200',\n",
+       " 'dependencies': ['ebcedf093fec4112a15ff9d8b562612a',\n",
+       "  'f4ed0876e4fa4dfd83fb5e2acf80baf5']}"
       ]
      },
      "execution_count": 19,
@@ -745,16 +741,16 @@
     {
      "data": {
       "text/plain": [
-       "{'id': 'c0b9c14eabc8440f9b153c46a71666ae',\n",
+       "{'id': '305dcb37b71347a290d7b7e1f4303384',\n",
        " 'name': 'Document 3',\n",
-       " 'experiment_id': 'ebd2d122fcfc48b789fa3aa7ab6e9a81',\n",
+       " 'experiment_id': 'e23a13ccdb4849978f0a8daab9fdf200',\n",
        " 'document_type': '',\n",
        " 'version_depth': 0,\n",
        " 'file_id': '9876',\n",
        " 'parent_id': None,\n",
        " 'asc_path': '',\n",
-       " 'dependencies': ['01a1749efdc24c68a0f378329fc88ed7',\n",
-       "  'd334aa3268c54898a51575d49607e1cc'],\n",
+       " 'dependencies': ['ebcedf093fec4112a15ff9d8b562612a',\n",
+       "  'f4ed0876e4fa4dfd83fb5e2acf80baf5'],\n",
        " 'document_extension': None}"
       ]
      },
