update jupyter notebooks

--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -23,7 +23,8 @@
     "from ndi import database, Experiment, FileNavigator, DaqSystem, Channel\n",
     "from ndi.daqreaders import MockReader\n",
     "from sqlalchemy import and_, or_\n",
-    "from ndi.database.query import Query as Q, AndQuery, OrQuery"
+    "from ndi.database.query import Query as Q, AndQuery, OrQuery\n",
+    "from ndi.database.sql import Datatype"
    ]
   },
   {
@@ -42,9 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for table, value in db.__get_tables().items():\n",
+    "for table, value in db.get_tables().items():\n",
     "    print(table)\n",
-    "    print(table.__name__)\n",
+    "    print(table if isinstance(table, str) else table.__name__)\n",
     "    print(value)\n",
     "    print(value.__name__)"
    ]
@@ -134,7 +135,7 @@
     "        field['name'] == 'nope too', \n",
     "        field['name'] == 'myExperiment3'))\n",
     "\n",
-    "for obj in db._collections[Experiment].find(sqla_query=filters, as_flatbuffers=False):\n",
+    "for obj in db._collections[Experiment].find(sqla_query=filters, result_format=Datatype.SQL_ALCHEMY):\n",
     "    print(obj)\n",
     "    print('-----')\n",
     "    new_e = Experiment.from_flatbuffer(obj['flatbuffer'])\n",
