add context to added experiment

--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -83,6 +83,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "e.ctx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "e2 = db.find_by_id(Experiment, e.id)"
    ]
   },
@@ -126,7 +135,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<ndi.daq_system.DaqSystem object at 0x116143dc0>, <ndi.daq_system.DaqSystem object at 0x116150340>]\n"
+     ]
+    }
+   ],
    "source": [
     "print(ds_results)"
    ]
@@ -144,7 +161,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.experiment.Experiment at 0x1161435b0>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db.find(Experiment)"
    ]
@@ -192,7 +220,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File '../test_exp/.ndi/daq_systems/e362f5bb747240c5bf4361bb236029fd.dat' already exists\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    db.add(ds)\n",
