--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -72,23 +72,74 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ndi.probe.Probe object at 0x1199c4250>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.probe.Probe object at 0x1199c4400>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.epoch.Epoch object at 0x10d957070>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.epoch.Epoch object at 0x10d8fddf0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.epoch.Epoch object at 0x1199b9700>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.channel.Channel object at 0x10d8fdb20>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.channel.Channel object at 0x10d8fde20>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.channel.Channel object at 0x10d8fda60>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.probe.Probe object at 0x1199c44c0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.probe.Probe object at 0x1199c4520>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.epoch.Epoch object at 0x1199c43a0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.epoch.Epoch object at 0x1199c41f0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.epoch.Epoch object at 0x1199c45b0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.channel.Channel object at 0x1199c42b0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.channel.Channel object at 0x1199c4340>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
+      "<ndi.channel.Channel object at 0x1199c4670>\n",
+      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n"
+     ]
+    }
+   ],
    "source": [
     "db.add_experiment(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Experiment' object has no attribute 'ctx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-b598744a28c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Experiment' object has no attribute 'ctx'"
+     ]
+    }
+   ],
    "source": [
     "e.ctx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,15 +186,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<ndi.daq_system.DaqSystem object at 0x116143dc0>, <ndi.daq_system.DaqSystem object at 0x116150340>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ds_results)"
    ]
@@ -161,18 +204,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<ndi.experiment.Experiment at 0x1161435b0>]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.find(Experiment)"
    ]
@@ -220,15 +252,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File '../test_exp/.ndi/daq_systems/e362f5bb747240c5bf4361bb236029fd.dat' already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    db.add(ds)\n",
